# assistente-msep-backend

./: .gitignore  Dockerfile  README.md  analyze_tokens.py  download_models.py  msep.md  pyproject.toml  requirements.txt
.github/workflows/: main_api-assistentedamsep.yml
src/: agent.py  api.py  database.py  docling_converter.py  document_store.py  docx_exporter.py  notification_service.py  pdf_processor.py  plan_generator.py  plan_logic.py  prompts.py  rag_service.py  summary.py
src/agents/: __init__.py  didactic_resource_agent.py  exercises_agent.py  slides_agent.py
src/models/: didactic_resource_models.py  exercise_models.py  job_models.py  models.py  slide_models.py
src/template/: template-slides-sp.pptx  template.docx
src/tests/: test_schedule_calculator.py
src/tools/: __init__.py  chatmsep.py  chatmsep_tool.py  document_analyzer_tool.py  modify_teaching_plan.py  pdf_extraction_tool.py  save_plan_tool.py  teaching_plan_tool.py  web_search.py
src/utils/: pdf_converter.py  schedule_calculator.py  token_tracker.py  utils.py
